examples/failing/ConflictingQualifiedImports2.purs
-- @shouldFailWith ScopeConflict
module Main (module X) where

import A as X
import B as X
